# holcak-ai

./: CMakeLists.txt  LICENCE  README.md  build-msvs.bat  build.sh  layer.c  layer.h  main.cu  network.c
source/: activation.c  activation.h  function.c  layer.c  layer.cu  layer.cuh  layer.h  network.c  network.cu  network.cuh  network.h  neuron.c  neuron.h  tensor.cuh  trainer.cu  trainer.cuh
tests/: main.c
tests/hai/: function.c  function.h  layer.c  network.c
